--- a/style.css
+++ b/style.css
@@ -119,8 +119,41 @@
     font-size: 40px;
     text-align: center;
 }
+#about{
+    height: 100vh;
+    width: 98vw;
+      display: flex;
+      justify-content: space-around;
+      /* margin: 50px; */
+      background-color:#eef0f4;
+      position: relative;
+}
+#about-image,#about-text{
+    height: 90vh;
+    /* width: 40vw; */
+    /* background-color: black; */
+    color: #081158;
+    position: relative;
+    top: 10%;
+    font-size: 25px;
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+#about-image{
+    width: 27vw;
+    height: 60vh;
+    background-image: url(aboutimage.png);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+#about-text{
+    width: 55vw;
+}
+b{
+    font-weight: 1900;
+}
 #education{
-    height: 200vh;
+    height: 300vh;
     width: 98vw;
     
 }
@@ -166,8 +199,8 @@
     display: inline-block;
     border-radius: 10px;
    
-    box-shadow:  10px 10px 10px #666666,
-                 -10px -10px 10px #656565;
+    box-shadow:  10px 10px 10px #c9c9c9,
+                 -10px -10px 10px #c8c8c8;
 }
 .education-cardtitle{
     font-size: 30px;
@@ -186,6 +219,7 @@
     width: 28vw;
     margin-top: 20px;
     text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: lighter;
     
   
