--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap');
+*{
+    font-family: "Red Hat Text", sans-serif;
+}
+
+
+
 #home{
     height: 160vh;
     width: 98vw;
@@ -48,7 +56,7 @@
           /* height: 60vh; */
           /* width: 30vw; */
           
-          top: 10%;
+          /* top: 0%; */
           position: relative;
           display: flex;
           justify-content: space-around;
@@ -76,6 +84,15 @@
 }
 #contentname{
     font-size: 20px;
+    z-index: 0;
+}
+#content-text img{
+    z-index: 3;
+    height: 10vh;
+    width: 20vw;
+    position: relative;
+    /* left: %; */
+    top: 7%;
 }
 #contentabout{
     margin-top: 70px;
@@ -233,4 +250,50 @@ b{
     font-weight: lighter;
     
   
+}
+#contact{
+    
+    position: relative;
+    margin-top: 20%;
+    background-color: #081158;
+    height: 60vh;
+    width: 98vw;
+    display: flex;
+    justify-content: space-around;
+    color: white; 
+    
+}
+#contact-1,#contact-2,#contact-3{
+    margin-top: 6%;
+  
+    
+}
+#contact-1{
+    width: 30vw;
+    font-size: 30px;
+    text-align: center;
+  
+}
+#contact-2{
+    width: 30vw;
+}
+#contact-2 div{
+    font-size: 20px;
+}
+#contact-2 span,a{
+    font-size: 25px;
+    text-decoration: none;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#contact-3{
+    /* transform: translateY(-50%); */
+
+    width: 40vw;
+    text-align: center;
+    font-size: 20px;
+}
+i{
+    margin: 20px;
 }
